--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
-DB_USER=postgres
-DB_HOST=db.rampguhblynjopylwslu.supabase.co
+DB_USER=postgres.rampguhblynjopylwslu
+DB_HOST=aws-1-us-east-2.pooler.supabase.com
 DB_NAME=article
 DB_PASSWORD=t4yH5JCsV14HJerA
-DB_PORT=5432
+DB_PORT=6543
